cli/tests/snapshot/snapshots/snapshot__error_stderr_nested_annotated_record_pattern_typecheck_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: incompatible types
  ┌─ [INPUTS_PATH]/errors/nested_annotated_record_pattern_typecheck_fail.ncl:4:43
  │
4 │   let { x = { a : Number }} = { x = { a = "" }} in
  │                                           ^^ this expression
  │
  = Expected an expression of type `Number`
  = Found an expression of type `String`
  = These types are not compatible


